--- a/src/main/webapp/iframe_roomTypePrice.html
+++ b/src/main/webapp/iframe_roomTypePrice.html
@@ -38,44 +38,6 @@
             </div>
         </div>
     </fieldset>
-    <!--<fieldset id="dayRoom" class="layui-elem-field" style="display: none">-->
-    <!--<legend>特殊时段价格设置</legend>-->
-    <!--<div class="layui-field-box">-->
-    <!--<div id="dayRooms">-->
-    <!--<div class="layui-form-item">-->
-    <!--<div class="layui-input-block" style="margin: 0 10px;cursor: pointer;">-->
-    <!--<i class="layui-icon layui-icon-add-1" style="position: absolute; right:  20px;"-->
-    <!--id="addDom">添加</i>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div data-id="1" data-num="1" class="layui-form-item">-->
-    <!--<label class="layui-form-label">起止时间</label>-->
-    <!--<div class="layui-input-inline" style="width: 165px;">-->
-    <!--<input type="text" name="startTime1" autocomplete="off" class="layui-input inline-input"-->
-    <!--id="startTime1"-->
-    <!--placeholder="开始时间">-->
-    <!--</div>-->
-    <!--<div class="layui-input-inline" style="margin-left: 10px;width: 165px;">-->
-    <!--<input type="text" name="endTime1" autocomplete="off" class="layui-input inline-input"-->
-    <!--id="endTime1"-->
-    <!--placeholder="结束时间">-->
-    <!--</div>-->
-    <!--<label class="layui-form-label">价格</label>-->
-    <!--<div class="layui-input-inline" style="width: 165px;">-->
-    <!--<input type="number" class="layui-input inline-input" name="price1" id="price1"-->
-    <!--placeholder="￥"-->
-    <!--autocomplete="off">-->
-    <!--</div>-->
-    <!--<div class="layui-input-inline" id="updateBox" style="width: 75px; display: none">-->
-    <!--<a class="layui-btn layui-btn-primary" id='updateItem1'>修改</a>-->
-    <!--</div>-->
-    <!--<div class="icon-box" id="addIcon">-->
-    <!--<i class="layui-icon layui-icon-close"></i>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</fieldset>-->
     <fieldset class="layui-elem-field">
         <legend>钟点房价格设置</legend>
         <div class="layui-field-box">
@@ -86,7 +48,7 @@
                            autocomplete="off"
                            class="layui-input">
                 </div>
-                <div class="layui-form-mid layui-word-aux">三小时</div>
+                <div class="layui-form-mid layui-word-aux">四小时</div>
             </div>
         </div>
     </fieldset>
