--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -158,7 +158,7 @@
                 title: '新增',
                 shade: 0.6,
                 shadeClose: true,
-                content: 'iframe_admin.html&date=' + Date.now(),
+                content: 'iframe_admin.html?date=' + Date.now(),
                 end: function (index, layero) {
                     tab.reload();//刷新表格
                 }
