--- a/src/main/webapp/schedule_change.html
+++ b/src/main/webapp/schedule_change.html
@@ -823,4 +823,4 @@
     }
 </script>
 <script src="js/checkinCommon.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/modifyPriceYY.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/modifyPriceYYXG.js" type="text/javascript" charset="utf-8"></script>
