--- a/src/main/webapp/iframe_modifyPriceYYRZ.html
+++ b/src/main/webapp/iframe_modifyPriceYYRZ.html
@@ -91,6 +91,8 @@
     var $,element,$b,$remove,selectDom,
         dayNumber=getUrl("dayNumber"),
         orderId = getUrl("orderId"),
+        checkType = getUrl("checkType"),
+        starttime = getUrl("starttime"),
         rsd;
 
     layui.use(['element', 'jquery', 'table','form'], function () {
@@ -123,12 +125,13 @@
     }
     function DateToLStr(t) {
         var dt = null;
-        // new Date(decodeURIComponent(getUrl("startTime"))).getTime();
-        // DateToLStr(new Date(Date.now()+i*86400000)).split(" ")[0];
-        if(!!getUrl("startTime")){
-            dt = new Date(new Date(decodeURIComponent(getUrl("startTime"))).getTime()+t);
+        if(checkType=="day"&&new Date(Number(starttime)).getHours()<6){
+            //预约入住时间在6点以前的情况特殊处理
+            dt = new Date(new Date(Number(starttime)).getTime()+t-86400000);
         }else{
-            dt = new Date(Date.now()+t);
+
+            dt = new Date(new Date(Number(starttime)).getTime());
+
         }
         try {
             var y, m, m1, d, d1, h, h1, mm, mm1, s, s1;
