--- a/src/main/webapp/iframe_modifyPriceYYXG.html
+++ b/src/main/webapp/iframe_modifyPriceYYXG.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>修改价格</title>
-	<!--预约房间修改价格-->
+	<!--预约修改页面-----修改价格-->
     <script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
 	<style>
 		input::-webkit-outer-spin-button,
@@ -91,8 +91,7 @@
 <script>
 		var $,element,$b,$remove,selectDom,
             dayNumber=getUrl("dayNumber"),
-            checkType = getUrl("checkType"),
-            starttime = getUrl("starttime"),
+
             rsd;
 
   	  layui.use(['element', 'jquery', 'table','form'], function () {
@@ -114,7 +113,6 @@
         function dealDays() {
 
         	var str = '<div id="rtitle" class="table-row"><div class="cell "><div class="desc wp"><b>日期</b><b>房型</b></div></div>';
-
 			for(var i=0;i<dayNumber;i++){
                 str+= ['<div class="cell"><div class="wp">',
 
@@ -125,15 +123,14 @@
 
         }
         function DateToLStr(t) {
-            var dt = null;
-            if(checkType=="day"&&new Date(Number(starttime)).getHours()<6){
-                //预约入住时间在6点以前的情况特殊处理
-                dt = new Date(new Date(Number(starttime)).getTime()+t-86400000);
+  	      	var dt = null;
+            // new Date(decodeURIComponent(getUrl("startTime"))).getTime();
+            // DateToLStr(new Date(Date.now()+i*86400000)).split(" ")[0];
+            if(!!getUrl("startTime")){
+				dt = new Date(new Date(decodeURIComponent(getUrl("startTime"))).getTime()+t);
             }else{
-
-				dt = new Date(new Date(Number(starttime)).getTime());
-
-            }
+                dt = new Date(Date.now()+t);
+			}
             try {
                 var y, m, m1, d, d1, h, h1, mm, mm1, s, s1;
                 y = dt.getFullYear();
