--- a/src/main/webapp/iframe_updatePass.html
+++ b/src/main/webapp/iframe_updatePass.html
@@ -55,8 +55,7 @@
                     dataType: 'json',
                     data: {
                         passWord: data.field.oldPass,
-                        newPassword: data.field.newPass,
-                        confirmPassword: data.field.okPass
+                        newPassword: data.field.newPass
                     },
                     success: function (data) {
                         console.log(data);
