--- a/src/main/webapp/iframe_modifyPriceYYRZ.html
+++ b/src/main/webapp/iframe_modifyPriceYYRZ.html
@@ -130,7 +130,7 @@
             dt = new Date(new Date(Number(starttime)).getTime()+t-86400000);
         }else{
 
-            dt = new Date(new Date(Number(starttime)).getTime());
+            dt = new Date(new Date(Number(starttime)).getTime()+t);
 
         }
         try {
