--- a/src/main/webapp/residentStatement.html
+++ b/src/main/webapp/residentStatement.html
@@ -8,7 +8,8 @@
         .layui-table th {
             padding: 0 15px !important;
         }
-        .layui-table td{
+
+        .layui-table td {
             padding: 9px 15px !important;
         }
     </style>
@@ -38,34 +39,78 @@
     </ul>
 </nav>
 <div style="height: 70px;"></div>
+<form class="layui-form head">
+    <div class="layui-form-item">
+        <div class="layui-inline">
+            <label class="layui-form-label">在住时间</label>
+            <div class="layui-input-inline">
+                <input type="text" name="startTime" class="layui-input" id="startTime"
+                       placeholder="开始时间" autocomplete="off">
+            </div>
+            <div class="layui-form-mid">至</div>
+            <div class="layui-input-inline">
+                <input type="text" name="endTime" class="layui-input" id="endTime"
+                       placeholder="结束时间" autocomplete="off">
+            </div>
+        </div>
+        <div class="layui-inline">
+            <button class="layui-btn" lay-submit="" lay-filter="formData">查询</button>
+        </div>
+    </div>
+</form>
 <div class="tab-box">
     <table id="residentStatement" lay-filter="residentStatement" class="layui-table"></table>
 </div>
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use(['table', 'element', 'form'], function () {
-        var table = layui.table, $ = layui.$, form = layui.form, state = 0, title = '';
+    layui.use(['table', 'element', 'form', 'laydate'], function () {
+        var table = layui.table, $ = layui.$, form = layui.form, state = 0, title = '', laydate = layui.laydate
+            ,startTime = '', endTime = '';
 
         $(function () {
-
             resultInfo()
         });
 
         //获取
         function resultInfo() {
-
             $.ajax({
-                url: 'order/getCheckInReport',
+                url: '/order/getCheckInReport',
                 type: 'POST',
                 dataType: 'json',
+                data: {
+                    startTime: DateToLStr3(new Date(Date.now() - (24 * 60 * 60 * 1000))) + ' 06:00:00',
+                    endTime: DateToLStr3(new Date(Date.now())) + ' 06:00:00'
+                },
                 success: function (data) {
                     formatData(data.data)
                 }
             })
         }
 
-        function formatData(data) {
+        //监听提交
+        form.on('submit(formData)', function (data) {
+            if (!data.field.startTime) {
+                startTime = DateToLStr3(new Date(Date.now() - (24 * 60 * 60 * 1000))) + ' 03:00:00'
+            }
+            if (!data.field.endTime) {
+                endTime = DateToLStr3(new Date(Date.now())) + ' 05:00:00'
+            }
+            $.ajax({
+                url: '/order/getCheckInReport',
+                type: 'POST',
+                dataType: 'json',
+                data: {
+                    startTime: data.field.startTime,
+                    endTime: data.field.endTime
+                },
+                success: function (data) {
+                    formatData(data.data)
+                }
+            })
+            return false;
+        });
 
+        function formatData(data) {
             tab.reload({data: JSON.parse(JSON.stringify(data))});
         }
 
@@ -102,7 +147,7 @@
                 , {field: 'certificateNumber', title: '证件号码', align: 'center', rowspan: 2}
                 , {field: 'roomName', title: '房号', align: 'center', rowspan: 2}
                 , {field: 'roomTypeName', title: '房型', align: 'center', rowspan: 2}
-                , {field: 'money', title: '当天价格', align: 'center', width:120, rowspan: 2, totalRow: true}
+                , {field: 'money', title: '当天价格', align: 'center', width: 120, rowspan: 2, totalRow: true}
                 , {
                     field: 'startTime',
                     width: 180,
@@ -130,6 +175,42 @@
                 {field: 'otherPayNum', align: 'center', title: '其他支付'}
                 , {field: 'payCashNum', align: 'center', title: '现金'}
             ]]
+        });
+
+        //离店时间控件
+        var start = laydate.render({
+            elem: '#startTime'
+            , type: 'datetime'
+            , value: DateToLStr3(new Date(Date.now() - (24 * 60 * 60 * 1000))) + ' 06:00:00'
+            , format: 'yyyy/MM/dd HH:mm:ss'
+            , btns: ['clear', 'confirm'],
+            done: function (value, date) {
+                endMax = end.config.max;
+                end.config.min = date;
+                end.config.min.month = date.month - 1;
+            },
+            change: function (value, date, endDate) {
+                var timestamp2 = Date.parse(new Date(value));
+                timestamp2 = timestamp2 / 1000;
+                end.config.min = timestamp2;
+                end.config.min.month = date.month - 1;
+            }
+        });
+
+        var end = laydate.render({
+            elem: '#endTime'
+            , type: 'datetime'
+            , value: DateToLStr3(new Date(Date.now())) + ' 06:00:00'
+            , format: 'yyyy/MM/dd HH:mm:ss'
+            , btns: ['clear', 'confirm']
+            , done: function (value, date) {
+                if (!$.trim(value)) {
+                    var curDate = new Date();
+                    date = {'date': curDate.getDate(), 'month': curDate.getMonth() + 1, 'year': curDate.getFullYear()};
+                }
+                start.config.max = date;
+                start.config.max.month = date.month - 1;
+            }
         });
     });
 
