--- a/src/main/webapp/iframe_member_debitCard.html
+++ b/src/main/webapp/iframe_member_debitCard.html
@@ -71,7 +71,7 @@
                 <div class="layui-form-mid layui-word-aux" style="color:#ff0000;">*</div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">优惠价格</label>
+                <label class="layui-form-label">赠送价格</label>
                 <div class="layui-input-inline">
                     <input type="number" name="presenterMoney" lay-verify="required" placeholder="请输入金额" autocomplete="off"
                            class="layui-input">
