--- a/src/main/webapp/management_layer.html
+++ b/src/main/webapp/management_layer.html
@@ -69,8 +69,7 @@
                 type: 'POST',
                 dataType: 'json',
                 data: {
-                    startTime: DateToLStr3(new Date(Date.now() - (24 * 60 * 60 * 1000))) + ' 03:00:00',
-                    endTime: DateToLStr3(new Date(Date.now())) + ' 05:00:00'
+                    time: new Date()
                 },
                 success: function (rs) {
                     if (rs.success) {
@@ -88,18 +87,14 @@
         //监听提交
         form.on('submit(formData)', function (data) {
             if (!startTime) {
-                startTime = DateToLStr4(new Date()).concat(' 03:00:00')
-            }
-            if (!endTime) {
-                endTime = DateToLStr4(new Date(new Date().getTime() + (24 * 60 * 60 * 1000))).concat(' 05:00:00');
+                startTime = new Date();
             }
             $.ajax({
                 url: api.FormManangeResponse,
                 type: 'POST',
                 dataType: 'json',
                 data: {
-                    startTime: startTime,
-                    endTime: endTime
+                    time: startTime
                 },
                 success: function (rs) {
                     if (rs.success) {
@@ -227,8 +222,7 @@
             , btns: ['confirm']
             , format: 'yyyy/MM/dd'
             , done: function (value, date) {
-                startTime = value.concat(' 03:00:00');
-                endTime = DateToLStr(new Date(new Date(value.concat(' 05:00:00')).getTime() + (24 * 60 * 60 * 1000)));
+                startTime = new Date(value);
             }
 
         });
