--- a/src/main/webapp/checkIn.html
+++ b/src/main/webapp/checkIn.html
@@ -134,7 +134,7 @@
                 <div class="layui-inline">
                     <label class="layui-form-label">渠道</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="channel1" id="channel1" value="步入 " readonly="" style="background: #eee;"
+                        <input type="text" name="channel1" id="channel1" value="直接入住" readonly="" style="background: #eee;"
                                autocomplete="off" class="layui-input">
                     </div>
                 </div>
