--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -372,6 +372,10 @@
                                 }
                             });
                         }
+                    },
+                    error: function (err) {
+                        console.log('error');
+                        console.log(err);
                     }
                 });
 
