收银汇总页面 Undefined

--- a/src/main/webapp/cashier_account.html
+++ b/src/main/webapp/cashier_account.html
@@ -155,9 +155,11 @@
                     field: 'channel', title: '渠道', align: 'center', templet: function (data) {
                         switch (data.channel) {
                             case 'subscribe':
-                                return '预约订单';
+                                return '预约入住';
                             case 'directly':
                                 return '直接入住';
+                            case '':
+                                return '';
                         }
                     }
                 }
