--- a/src/main/webapp/managerReport.html
+++ b/src/main/webapp/managerReport.html
@@ -138,7 +138,7 @@
         <p class="td" id="maintenanceroomNumberinsertRial"></p>
     </div>
     <div class="tr">
-        <p class="td">门店锁房数</p>
+        <p class="td">锁房数</p>
         <p class="td" id="numberlockedStoresday"></p>
         <p class="td" id="numberlockedStoresmonth"></p>
         <p class="td" id="numberlockedStoreslastMonthDay"></p>
@@ -227,7 +227,7 @@
         <p class="td" id="timeoutRateinsertRial"></p>
     </div>
     <div class="tr">
-        <p class="td">夜核房费</p>
+        <p class="td">房费</p>
         <p class="td" id="nuclearnightRoomchargeday"></p>
         <p class="td" id="nuclearnightRoomchargemonth"></p>
         <p class="td" id="nuclearnightRoomchargelastMonthDay"></p>
@@ -306,7 +306,7 @@
         <p class="td" id="agreementUnit3lastYearDay"></p>
         <p class="td" id="agreementUnit3insertRial"></p>
     </div>
-    <div class="tr">
+   <!-- <div class="tr">
         <p class="td">中介</p>
         <p class="td" id="intermediary3day"></p>
         <p class="td" id="intermediary3month"></p>
@@ -333,9 +333,9 @@
         <p class="td" id="microLetter3year"></p>
         <p class="td" id="microLetter3lastYearDay"></p>
         <p class="td" id="microLetter3insertRial"></p>
-    </div>
+    </div>-->
     <div class="tr">
-        <p class="td">步入</p>
+        <p class="td">直接入住</p>
         <p class="td" id="enter3day"></p>
         <p class="td" id="enter3month"></p>
         <p class="td" id="enter3lastMonthDay"></p>
@@ -344,7 +344,7 @@
         <p class="td" id="enter3insertRial"></p>
     </div>
     <div class="tr">
-        <p class="td">直接预订</p>
+        <p class="td">预订入住</p>
         <p class="td" id="directBooking3day"></p>
         <p class="td" id="directBooking3month"></p>
         <p class="td" id="directBooking3lastMonthDay"></p>
@@ -396,7 +396,7 @@
         <p class="td" id="agreementUnit4lastYearDay"></p>
         <p class="td" id="agreementUnit4insertRial"></p>
     </div>
-    <div class="tr">
+   <!-- <div class="tr">
         <p class="td">中介</p>
         <p class="td" id="intermediary4day"></p>
         <p class="td" id="intermediary4month"></p>
@@ -423,9 +423,9 @@
         <p class="td" id="microLetter4year"></p>
         <p class="td" id="microLetter4lastYearDay"></p>
         <p class="td" id="microLetter4insertRial"></p>
-    </div>
+    </div>-->
     <div class="tr">
-        <p class="td">步入</p>
+        <p class="td">直接入住</p>
         <p class="td" id="enter4day"></p>
         <p class="td" id="enter4month"></p>
         <p class="td" id="enter4lastMonthDay"></p>
@@ -434,7 +434,7 @@
         <p class="td" id="enter4insertRial"></p>
     </div>
     <div class="tr">
-        <p class="td">直接预订</p>
+        <p class="td">预订入住</p>
         <p class="td" id="directBooking4day"></p>
         <p class="td" id="directBooking4month"></p>
         <p class="td" id="directBooking4lastMonthDay"></p>
@@ -486,7 +486,7 @@
         <p class="td" id="agreementUnit5lastYearDay"></p>
         <p class="td" id="agreementUnit5insertRial"></p>
     </div>
-    <div class="tr">
+  <!--  <div class="tr">
         <p class="td">中介</p>
         <p class="td" id="intermediary5day"></p>
         <p class="td" id="intermediary5month"></p>
@@ -513,9 +513,9 @@
         <p class="td" id="microLetter5year"></p>
         <p class="td" id="microLetter5lastYearDay"></p>
         <p class="td" id="microLetter5insertRial"></p>
-    </div>
+    </div>-->
     <div class="tr">
-        <p class="td">步入</p>
+        <p class="td">直接入住</p>
         <p class="td" id="enter5day"></p>
         <p class="td" id="enter5month"></p>
         <p class="td" id="enter5lastMonthDay"></p>
@@ -524,7 +524,7 @@
         <p class="td" id="enter5insertRial"></p>
     </div>
     <div class="tr">
-        <p class="td">直接预订</p>
+        <p class="td">预订入住</p>
         <p class="td" id="directBooking5day"></p>
         <p class="td" id="directBooking5month"></p>
         <p class="td" id="directBooking5lastMonthDay"></p>
@@ -577,7 +577,7 @@
         <p class="td" id="agreementUnit6lastYearDay"></p>
         <p class="td" id="agreementUnit6insertRial"></p>
     </div>
-    <div class="tr">
+   <!-- <div class="tr">
         <p class="td">中介</p>
         <p class="td" id="intermediary6day"></p>
         <p class="td" id="intermediary6month"></p>
@@ -604,9 +604,9 @@
         <p class="td" id="microLetter6year"></p>
         <p class="td" id="microLetter6lastYearDay"></p>
         <p class="td" id="microLetter6insertRial"></p>
-    </div>
+    </div>-->
     <div class="tr">
-        <p class="td">步入</p>
+        <p class="td">直接入住</p>
         <p class="td" id="enter6day"></p>
         <p class="td" id="enter6month"></p>
         <p class="td" id="enter6lastMonthDay"></p>
@@ -615,7 +615,7 @@
         <p class="td" id="enter6insertRial"></p>
     </div>
     <div class="tr">
-        <p class="td">直接预订</p>
+        <p class="td">预订入住</p>
         <p class="td" id="directBooking6day"></p>
         <p class="td" id="directBooking6month"></p>
         <p class="td" id="directBooking6lastMonthDay"></p>
